compiler/testData/diagnostics/tests/qualifiedExpression/nullCalleeExpression.fir.kt
// NI_EXPECTED_FILE
// COMPARE_WITH_LIGHT_TREE

val unwrapped = <!UNRESOLVED_REFERENCE!>some<!>.<!SYNTAX!><<!><!UNRESOLVED_REFERENCE!>cabc<!><!SYNTAX{LT}!><!SYNTAX!>$Wrapper<!><<!PROJECTION_ON_NON_CLASS_TYPE_ARGUMENT!>out Any<!>><!>::<!UNRESOLVED_REFERENCE!>unwrap<!>
